--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,11 @@
 body{
   margin: 0;
   padding: 0;
+  background: rgb(188, 179, 179);
 }
-
+main{
+  background: rgb(188, 179, 179)
+}
 .header-container{
   background: rgb(60, 75, 85);
   width:100%;
@@ -34,14 +37,13 @@ body{
   }
 }
 main{
-  height: 90vh;
-  .container-area{
+  /* .container-area{
     height: inherit;
-  }
+  } */
   .sidebar{
-    height: 100%;
+    height: 90vh;
     /* background: whitesmoke; */
-    background: rgb(188, 179, 179);
+    ;
 
     .sidebar-content{
       height: 90%;
@@ -61,7 +63,7 @@ main{
       
       border: 1px solid rgb(69, 67, 67);
       border-radius: 5px;
-      margin-top: 10%;
+      margin-top: 5%;
      
       color:rgb(162, 162, 162);
       font-size: 1.5em;
@@ -71,15 +73,14 @@ main{
 
     .content-cards-list{
       
-      height: 20vh;
       width: 80%;
-      margin: 4%;
+      margin: 0 4%;
       color:rgb(162, 162, 162);
       box-sizing: border-box;
       
       .content-card{
-        background: rgb(69, 67, 67);
-      height: 100%;
+      background: rgb(69, 67, 67);
+      height: 20vh;
       border: 1px solid rgb(69, 67, 67);
       border-radius: 5px;
       margin-top: 5%;
@@ -98,6 +99,7 @@ main{
       border-radius: 5px;
       margin: 6%;
       color:rgb(162, 162, 162);
+      position: relative;
     }
     
     
